--- a/.env.development
+++ b/.env.development
@@ -27,7 +27,7 @@ MIX_VUE_APP_URL = 'https://domainbackend.uniquenetsys.com/'
 
 # VUE_APP_BASE_API = 'http://domainmanagement.test/api/v1'
 
-VUE_APP_BASE_API = 'https://domainbackend.uniquenetsys.com/api/v1'
+VUE_APP_BASE_API = 'https://lsnppa.watchtowermanagement.ng/api/v1'
 
 VUE_APP_SITE_CURRENCY = 'NGN'
 VUE_APP_SITE_CURRENCY_ICON = '₦'
