--- a/.env.production
+++ b/.env.production
@@ -15,7 +15,7 @@ VUE_APP_SITE_URL = "${MIX_VUE_APP_URL}"
 # base api
 MIX_VUE_APP_URL = 'https://domainbackend.uniquenetsys.com/'
 
-VUE_APP_BASE_API = 'https://domainbackend.uniquenetsys.com/api/v1'
+VUE_APP_BASE_API = 'https://lsnppa.watchtowermanagement.ng/api/v1'
 
 VUE_APP_SITE_CURRENCY = 'NGN'
 VUE_APP_SITE_CURRENCY_ICON = '₦'
